--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,6 @@
 <resources>
     <string name="app_name">ImageResizer</string>
-    <string name="alarms_destination_label">Alarm</string>
-    <string name="schedule_destination_label">schedule</string>
-    <string name="timer_destination_label">timer</string>
-    <string name="stopwatch_destination_label">stopwatch</string>
+    <string name="Camera">Camera</string>
+    <string name="Gallery">Gallery</string>
+
 </resources>
