--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,6 @@
     <string name="app_name">ImageResizer</string>
     <string name="Camera">Camera</string>
     <string name="Gallery">Gallery</string>
+    <string name="content_description_media">content_description_media</string>
 
 </resources>
