--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,10 @@
     <string name="content_description_media">content_description_media</string>
     <string name="enter_file_name">Enter File Name</string>
     <string name="save_file">Save File</string>
+    <string name="title_activity_image_screen">ImageScreen</string>
+    <string name="dummy_button">Dummy Button</string>
+    <string name="dummy_content">DUMMY\nCONTENT</string>
+    <string name="Share" />
+    <string name="delete">Delete</string>
 
 </resources>
